test/Fail/NoIrrelevance10.agda
{-# OPTIONS --no-irrelevance #-}

.A : Set₁
A = Set
