test/Fail/NoIrrelevance10.err
NoIrrelevance10.agda:3.2-3: error: [NeedOptionIrrelevance]
Irrelevance modality is disabled (use options --irrelevance and
--no-irrelevance to enable/disable irrelevance)
